Fixed naming in crops and started plotting

--- a/website/layouts/index.html
+++ b/website/layouts/index.html
@@ -3,4 +3,10 @@
 	<div class = plot>
 		{{ partial "PlotProductionPerCapita" .}}
 	</div>
+	<div class = plot>
+		{{ partial "PlotCrops" .}}
+	</div>
+	<div class = plot>
+		{{ partial "PlotCereal" .}}
+	</div>
 {{ end }}
